# football-analysis

./: .gitignore  Readme.md  dwonloads  pyproject.toml  requirements.txt
api/: make_celery.py  pyproject.toml
api/src/: __init__.py  pipelinebp.py  tasks.py
inference/: cvdetection.py  detection.py  main.py  persist.py  test.py  video.py
inference/analysis/: export.py  passing.py  possesion.py  pressure.py  receiving.py  test.json  test.py
inference/api/: Readme.md  app.py  make_celery.py  pyproject.toml
inference/api/src/: __init__.py  pipelinebp.py  tasks.py
inference/detection/: court_detector.py  yolo_detector.py
inference/detection/cameraestimator/: Camera.py  CameraEstimator.py  CameraObject.py  CameraTracker.py
inference/detection/gameanalytics/: GameAnalytics.py  TopView.py  TopViewPoint.py
inference/detection/teamclassifier/: PlayerClustering.py
inference/detection/teamdetector/: BoundingBox.py  TeamDetector.py
inference/eventdetection/: infer.py
inference/firebase/: firestore.py
inference/mlmodels/two_pix2pix/data/: aligned_dataset.py  custom_dataset_data_loader.py  two_aligned_dataset.py
inference/mlmodels/two_pix2pix/network/: base_model.py  pix2pix_model.py  two_pix2pix_model.py
inference/persistance/: persist.py
inference/util/: config.py  image_process.py  utils.py  video_handling.py
